finished surveyEditorPage.html

--- a/src/mockup/html/SUPanel.html
+++ b/src/mockup/html/SUPanel.html
@@ -41,7 +41,6 @@
             </div>
          </div>
       </section>
-      
 
       <section class="row navi-row">
          <nav class="col-sm-6 navi-buttons">
@@ -49,14 +48,11 @@
                <li class="active">
                   <a data-toggle="tab" href="#home">Home</a>
                </li>
-               <li>
-                  <a data-toggle="tab" href="#surveyTemplates">Survey Templates</a>
-               </li>
             </ul>
          </nav>
          <div class="col-sm-6">
             <div class="col-sm-6 text-right creation-buttons">
-               <a class="btn btn-success" href="html/surveyCreator.html">New Survey</a>
+               <a class="btn btn-success" href="./surveyEditorPage.html">New Survey</a>
             </div>
             <div class="col-sm-4">
                <input class="searchbar" id="survey_searchbar" type="search" name="search_survey" value="" placeholder="Enter a field to search for"></br>
@@ -69,7 +65,6 @@
             </div>
          </div>
       </section>
-
       <div class="tab-content">
 
          <section id="home" class="tab-pane active row">
@@ -107,8 +102,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -130,8 +127,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -153,8 +152,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -176,8 +177,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -199,8 +202,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -222,8 +227,10 @@
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
