--- a/src/mockup/html/designerPanel.html
+++ b/src/mockup/html/designerPanel.html
@@ -53,7 +53,7 @@
          </nav>
          <div class="col-sm-6">
          <div class="col-sm-6 text-right creation-buttons">
-               <a class="btn btn-success" href="html/surveyCreator.html">New Survey</a>
+               <a class="btn btn-success" href="./surveyEditorPage.html">New Survey</a>
             </div>
             <div class="col-sm-4">
                <input class="searchbar" id="survey_searchbar" type="search" name="search_survey" value="" placeholder="Enter a field to search for"></br>
