--- a/src/mockup/html/analysis.html
+++ b/src/mockup/html/analysis.html
@@ -48,21 +48,25 @@
                      </div>
                      <div id="collapse1" class="panel-collapse collapse in">
                            <div class="panel-body">
-                              <div class="panel panel-default row">
-                                 <div class="panel-body col-sm-9">Filter by demographics</div>
-                                 <img class="col-sm-3 plusSign" src="../img/add.png">
+                              <div class="panel panel-default">
+                                 <div class="panel-body">Filter by demographics
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Filter by answers</div>
+                                 <div class="panel-body">Filter by answers
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Filter by number of repsonses</div>
+                                 <div class="panel-body">Filter by number of repsonses
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Filter by date answered</div>
+                                 <div class="panel-body">Filter by date answered
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Filter by selected questions/reponses</div>
+                                 <div class="panel-body">Filter by selected questions/reponses
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                            </div>
                         </div>
@@ -78,10 +82,12 @@
                      <div id="collapse2" class="panel-collapse collapse">
                            <div class="panel-body">
                               <div class="panel panel-default">
-                                 <div class="panel-body">Ages 18-24</div>
+                                 <div class="panel-body">Ages 18-24
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Answered "Gruyere" to question 1</div>
+                                 <div class="panel-body">Answered "Gruyere" to question 1
+                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                            </div>
                         </div>
@@ -97,13 +103,13 @@
                      <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
                               <div class="panel panel-default">
-                                 <div class="panel-body">Export as PDF</div>
+                                 <a class="panel-body">Export as PDF</a>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Export as CSV</div>
+                                 <a class="panel-body">Export as CSV</a>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Export selected graph as png</div>
+                                 <a class="panel-body">Export selected graph as png</a>
                               </div>
                         </div>
                      </div>
@@ -115,7 +121,7 @@
                   <div class="panel-heading">
                      <div class="row">
                         <div class="col-sm-8">Question 1</div>
-                        <div class="col-sm-4" align="right"><input type="checkbox" name="selected" class="float-right">Select for analysis&nbsp;&nbsp;</div>
+                        <div class="col-sm-4" align="right">Select for analysis&nbsp;&nbsp;<input type="checkbox" name="selected" class="float-right"></div>
                      </div>
                   </div>
                   <div class="panel-body">
@@ -162,20 +168,20 @@
                   <div class="panel-heading">
                      <div class="row">
                         <div class="col-sm-8">Question 2</div>
-                        <div class="col-sm-4"><input type="checkbox" name="selected" class="float-right"></div>
+                        <div class="col-sm-4" align="right">Select for analysis&nbsp;&nbsp;<input type="checkbox" name="selected" class="float-right"></div>
                      </div>
                   </div>
                   <div class="panel-body">
                      <h3>Why?</h3>
                      <div class="row">
-                        <div class="col-sm-8">Type: Free Response</div><div class="col-sm-4"><p class="float-right">Responses: 50</p></div>
+                        <div class="col-sm-8">Type: Free Response</div><div class="col-sm-4"><p class="float-right">Responses: 3</p></div>
                      </div>
                   </div>
                   <div class="panel-footer">
                      <table id="dataTable1" class="table table-striped">
                         <thead>
                            <tr>
-                              <th>Select</th>
+                              <th>Select for analysis</th>
                               <th>Response</th>
                            </tr>
                         </thead>
